# django_learning

./: catalog_data.json  pyproject.toml
blog/: admin.py  forms.py  urls.py  views.py
blog/fixtures/: blog_data.json
blog/migrations/: 0001_initial.py  0002_alter_fashionblog_is_published.py
blog/models/: __init__.py  fashion_blog.py
blog/templates/blog/: add_post.html  blog.html  blog_detail.html  (+2 more)
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/fixtures/: catalog_data.json
catalog/migrations/: 0001_initial.py  0002_alter_product_create_date_and_more.py  0002_delete_fashionblog_alter_product_image_and_more.py  0002_initial.py  0002_product_product_owner.py  0003_alter_category_options_alter_product_options.py  0003_product_in_stock.py  0003_version.py  0004_alter_category_options_alter_product_options.py  0004_alter_product_options.py  0004_rename_version_status_version_is_active_and_more.py  0005_alter_category_options_alter_product_options.py  0006_alter_product_category.py
catalog/models/: __init__.py  category.py  fashion_blog.py  product.py  version.py
catalog/templatetags/: catalog_tags.py  my_tags.py
catalog/views/: __init__.py  dashboard_views.py  product_views.py  show_category.py  toggle_view.py
config/: settings.py  urls.py
static/css/: pricing.css
users/: forms.py  models.py  services.py  urls.py  views.py
users/fixtures/: users_data.json
users/migrations/: 0001_initial.py  0002_alter_user_is_active.py  0002_user_patronymic_alter_user_first_name_and_more.py  0003_user_verification_key.py
(+24 files in other folders)
