[tool.poetry]
name = "django-learning"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "django_learning"}]

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
django = "^4.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
