[tool.poetry]
name = "django-learning"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "django_learning"}]

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.2.1"


[tool.poetry.group.dev.dependencies]
psycopg2 = "^2.9.6"
pillow = "^9.5.0"
ipython = "^8.13.2"
python-slugify = "^8.0.1"
django-debug-toolbar = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
